<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <EditText
        android:id="@+id/command_input_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:digits="@string/formula_edittext_allowed_digits"
        android:hint="@string/command_input_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.button.MaterialButton
        android:id="@+id/roll_button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/roll_button"
        android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
        app:icon="@drawable/ic_dice"
        app:layout_constraintEnd_toStartOf="@+id/main_help_button"
        app:layout_constraintStart_toEndOf="@+id/clear_button"
        app:layout_constraintTop_toBottomOf="@+id/command_input_et" />

    <android.support.design.button.MaterialButton
        android:id="@+id/clear_button"
        style="@style/outlined_button_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/clear_button"
        android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
        app:layout_constraintEnd_toStartOf="@+id/roll_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/command_input_et" />

    <android.support.design.button.MaterialButton
        android:id="@+id/main_help_button"
        style="@style/outlined_button_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/info_button"
        android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/roll_button"
        app:layout_constraintTop_toBottomOf="@+id/command_input_et"
        />

    <View
        android:id="@+id/edit_favorite_divider"
        style="@style/horizontal_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roll_button" />

    <TextView
        android:id="@+id/favorites_title"
        style="@style/header_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/favorites_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_favorite_divider" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_favorite_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorites_title"
        android:clipToPadding="false"
        android:paddingBottom="80dp"/>

    <android.support.design.button.MaterialButton
        android:id="@+id/favorites_button"
        style="@style/outlined_button_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/all_favorites_button"
        android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/favorites_title"
        app:layout_constraintTop_toBottomOf="@+id/edit_favorite_divider" />

</android.support.constraint.ConstraintLayout>