<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorNeutralBackground"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="com.example.android.simpledice.ui.AddFavoriteActivity">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/card_view"
            app:layout_constraintBottom_toTopOf="@+id/ad_divider"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorContentBackground">


            <TextView
                    android:id="@+id/name_header_tv"
                    style="@style/header_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/name_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                    android:id="@+id/name_input_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:hint="@string/input_name_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_header_tv"/>

            <View
                    android:id="@+id/divider_name_formula"
                    style="@style/horizontal_divider"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_input_et"/>

            <TextView
                    android:id="@+id/formula_header_tv"
                    style="@style/header_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/formula_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_name_formula"/>

            <EditText
                    android:id="@+id/formula_input_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:digits="@string/formula_edittext_allowed_digits"
                    android:ems="10"
                    android:hint="@string/command_input_hint"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:minLines="1"
                    android:scrollbars="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/formula_header_tv"/>

            <View
                    android:id="@+id/divider_formula_explanation"
                    style="@style/horizontal_divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/formula_input_et"/>

            <ScrollView
                    android:id="@+id/explanation_container"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider_formula_explanation">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/help_header_tv"
                            style="@style/header_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingTop="8dp"
                            android:text="@string/help_header"/>

                    <TextView
                            android:id="@+id/help_tv"
                            style="@style/basic_text_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/help_formula_advice"/>

                </LinearLayout>

            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <View
            android:id="@+id/ad_divider"
            style="@style/horizontal_divider"
            app:layout_constraintBottom_toTopOf="@id/add_favorite_ad_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <FrameLayout
            android:id="@+id/add_favorite_ad_container"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ad_container_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/banner_ad"/>

    </FrameLayout>

    <!-- Requires elevation of 10 to be above CardViews -->
    <com.example.android.simpledice.ui.DKeyboard
            android:id="@+id/d_keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:elevation="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>