<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context="com.example.android.simpledice.ui.HistoryActivity">

    <FrameLayout android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/result_container"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_rv"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="80dp"
        />

        <ProgressBar
                android:id="@+id/history_progress_bar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:visibility="gone"
        />

        <TextView
                android:id="@+id/history_activity_no_history_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/basic_text_style"
                android:text="@string/history_no_history_results"
                android:visibility="gone"
                android:gravity="center"/>
    </FrameLayout>

    <View
            android:id="@+id/results_divider"
            style="@style/horizontal_divider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:transitionName="@string/results_divider_transition_key"/>

    <FrameLayout
            android:id="@+id/result_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/ad_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/results_divider">

        <include layout="@layout/results"/>

    </FrameLayout>

    <View
            android:id="@+id/ad_divider"
            style="@style/horizontal_divider"
            app:layout_constraintBottom_toTopOf="@id/history_ad_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:transitionName="@string/ad_divider_transition_key"/>

    <FrameLayout
            android:id="@+id/history_ad_container"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ad_container_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/banner_ad"/>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>